force-app/main/default/objects/Project_Proposal__c/Project_Proposal__c.object-meta.xml
<CustomObject>
    <description>Project Proposal: An application for funding either through a grant request, a tender response, or a contract proposal.
Project: The work that is undertaken to satisfy a commitment made to a funding body or client.  The commitment is likely to be a contract (and possible variations) resulting from the acceptance of a project proposal.  This occurs after a grant, contract of philanthropic donation has been awarded.</description>
    <label>Project Proposal</label>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>