force-app/main/default/objects/Project_Proposal__c/fields/ApprovalRequeslink__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequeslink__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalRequeslink</label>
    <type>Text</type>
</CustomField>