force-app/main/default/objects/Project_Proposal__c/fields/ApprovalRequeslinkURL__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequeslinkURL__c</fullName>
    <defaultValue>&apos;https://sfut2-ltu.cs152.force.com/portal/s/detail/04i5P000000Lnd0QAC&apos;</defaultValue>
    <label>ApprovalRequeslinkURL</label>
    <type>Url</type>
</CustomField>