force-app/main/default/objects/Project_Proposal__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF( /*Department level*/
NOT(ISBLANK(I_RS_LeadChiefInvestigator__c)) &amp;&amp; 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
I_RS_LeadChiefInvestigator__r.Contact.Account.Name,

IF( /*Department level*/
NOT(ISBLANK(I_RS_LeadChiefInvestigator__c)) &amp;&amp; 
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Parent.Parent.Parent.Name = &quot;La Trobe University&quot;,
I_RS_LeadChiefInvestigator__r.Contact.Account.Parent.Name,




&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>