force-app/main/default/objects/Project_Proposal__c/fields/Has_Overdue_Milestone_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Has_Overdue_Milestone_Tasks__c</fullName>
    <formula>I_RS_Number_of_Overdue_Milestone_Tasks__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Overdue Milestone Tasks</label>
    <type>Checkbox</type>
</CustomField>