force-app/main/default/objects/Project_Proposal__c/fields/HEC_Additional_Approval__c.field-meta.xml
<CustomField>
    <fullName>HEC_Additional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will an additional HEC approval be required to conduct the proposed research?</inlineHelpText>
    <label>Additional HEC approval required?</label>
    <type>Checkbox</type>
</CustomField>