force-app/main/default/objects/Project_Proposal__c/fields/HEC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HEC_Approval_Date__c</fullName>
    <inlineHelpText>By when will the additional HEC approval be required so that the research project is not delayed.</inlineHelpText>
    <label>Date by when HEC approval is required?</label>
    <type>Date</type>
</CustomField>