force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Account_for_LeftOverFunds_Treatment__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Account_for_LeftOverFunds_Treatment__c</fullName>
    <inlineHelpText>Nominate the WBS number for your outside earnings account or the nominated account funds to be transferred to.</inlineHelpText>
    <label>Account for Left Over Funds Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>