force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Account_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Account_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Organisation</description>
    <inlineHelpText>Search to find the Funder. If it does not already exist leave this blank and add the Funder&apos;s name to the Comments field.</inlineHelpText>
    <label>Funder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Proposals</relationshipLabel>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>