force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Administring_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Administring_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Lead Organisation for this proposal/project if not La Trobe</inlineHelpText>
    <label>Administering Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Proposals - Lead Organisation</relationshipLabel>
    <relationshipName>Project_Proposals_Lead_Organisations</relationshipName>
    <type>Lookup</type>
</CustomField>