force-app/main/default/objects/Project_Proposal__c/fields/I_RS_AEC_Approved__c.field-meta.xml
<CustomField>
    <fullName>I_RS_AEC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there an existing AEC ethics approval that covers the proposed research?</inlineHelpText>
    <label>Existing AEC approval?</label>
    <type>Checkbox</type>
</CustomField>