force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Allow_Updates_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Allow_Updates_on_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When &quot;checked&quot; the record will be locked after submitted for approval.</description>
    <label>Allow Updates on Approval</label>
    <type>Checkbox</type>
</CustomField>