force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Already_Submitted__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Already_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the proposal has already been submitted to the Funder</inlineHelpText>
    <label>Already Submitted</label>
    <type>Checkbox</type>
</CustomField>