force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Approval_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is an internal field (not to be visible for user) used to restrict user to manually sett status to &quot;Approvals&quot;</description>
    <label>Approval Flag</label>
    <type>Checkbox</type>
</CustomField>