force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Awarded_Amount__c</fullName>
    <label>Awarded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>