force-app/main/default/objects/Project_Proposal__c/fields/I_RS_CC_SEO_Percent_Total__c.field-meta.xml
<CustomField>
    <fullName>I_RS_CC_SEO_Percent_Total__c</fullName>
    <label>CC SEO Percent Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>