force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Relinquished</fullName>
            </value>
            <value>
                <fullName>Transferred out</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>