force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Comments__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Comments__c</fullName>
    <inlineHelpText>Include instructions for this proposal.  Add the Funder&apos;s name if unable to select from the Funder field below.  If you are working with the Industry Engagement Portfolio include the relevant contact&apos;s name.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>