force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Competitive__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Competitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the proposal awarded via a competitive process?</inlineHelpText>
    <label>Competitive</label>
    <type>Checkbox</type>
</CustomField>