force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Count_Non_Overdue_Open_Milestones__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_Non_Overdue_Open_Milestones__c</fullName>
    <description>Task that are open and not over due</description>
    <label>Count - Non Overdue Open Milestone Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>