force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Count_of_Linked_Ethics_Requests_IBC__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Count_of_Linked_Ethics_Requests_IBC__c</fullName>
    <label>Count of Linked Ethics Requests IBC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>