force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Current_User_is_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Current_User_is_Approver__c</fullName>
    <description>Returns true if Current User is any of the First Approver and Second Approver</description>
    <formula>IF(
I_RS_First_Approver__r.Id = $User.Id ||  
I_RS_Second_Approver__r.Id = $User.Id,

True,
False
)</formula>
    <label>Current User is Approver</label>
    <type>Checkbox</type>
</CustomField>