force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Date_Doc_Provided_for_Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Doc_Provided_for_Peer_Review__c</fullName>
    <label>Date Doc Provided for Peer Review</label>
    <type>Date</type>
</CustomField>