force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Date_Recommended__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Recommended__c</fullName>
    <label>Date Recommended</label>
    <type>Date</type>
</CustomField>