force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Date_Submission_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Submission_Acknowledged__c</fullName>
    <description>The date the funder acknowledged they had received the proposal</description>
    <inlineHelpText>The date the funder acknowledged they had received the proposal</inlineHelpText>
    <label>Date Submission Acknowledged</label>
    <type>Date</type>
</CustomField>