force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Dismissal_Reason__c</fullName>
    <description>The reason a researcher has dismissed a recommendation</description>
    <label>Dismissal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_RS_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workload</fullName>
            </value>
            <value>
                <fullName>Research not in scope</fullName>
            </value>
            <value>
                <fullName>Not eligible to apply</fullName>
            </value>
            <value>
                <fullName>Other commitments prevent meeting time line</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>