force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Does_this_involve_a_clinical_trial__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Does_this_involve_a_clinical_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this research study prospectively assign human participants to health-related interventions to evaluate the effects on health outcomes?</inlineHelpText>
    <label>Does this involve a clinical trial?</label>
    <type>Checkbox</type>
</CustomField>