force-app/main/default/objects/Project_Proposal__c/fields/I_RS_EOI_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_EOI_Date__c</fullName>
    <description>The date the researcher expressed interest in the opportunity</description>
    <label>Date Proposal Initiated</label>
    <type>Date</type>
</CustomField>