force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Ethics_Applications_Approvals__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Applications_Approvals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ethics Applications/Approvals</label>
    <referenceTo>Related_Ethics_Applications__c</referenceTo>
    <relationshipLabel>Project Proposals</relationshipLabel>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>