force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Ethics_Notes__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Notes__c</fullName>
    <formula>&quot;All ethic approvals required for the research covered in this proposal must be associated to this proposal.&quot; &amp; br() &amp;
&quot;Use the fields below to indicate if additional ethics approvals are required and list their types and the date they will be required.&quot; &amp; br() &amp;
&quot;To link an existing ethics approval or application:&quot; &amp; br() &amp;
&quot;- Navigate to the ethics approval/application record&quot; &amp; br() &amp;
&quot;- Select the ‘Link Project/Proposal’&quot; &amp; br() &amp;
&quot;- Search for this proposal using the proposal’s title&quot; &amp; br() &amp;
&quot;- Select save&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Please Note</label>
    <type>Text</type>
</CustomField>