force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Feedback__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Feedback__c</fullName>
    <label>Feedback</label>
    <type>TextArea</type>
</CustomField>