force-app/main/default/objects/Project_Proposal__c/fields/I_RS_First_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_First_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field holds the user to who has to approve when the project/proposal is submitted for approval.</description>
    <label>First Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals_First_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>