force-app/main/default/objects/Project_Proposal__c/fields/I_RS_First_Approver_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_First_Approver_Contact_Id__c</fullName>
    <formula>I_RS_First_Approver__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Approver Contact Id</label>
    <type>Text</type>
</CustomField>