force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Funding_Body_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Body_Contact__c</fullName>
    <inlineHelpText>Name of the relevant contact person at the Funding Body.</inlineHelpText>
    <label>Funder Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>