force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Funding_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search to find the funding opportunity. If it does not already exist, leave this blank.</inlineHelpText>
    <label>Funding Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Project Proposals</relationshipLabel>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>