force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Further_details_Ethics__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Further_details_Ethics__c</fullName>
    <inlineHelpText>List each type of additional ethics approval required and the date it is required.  Eg Human Ethics 22/02/2022</inlineHelpText>
    <label>Further details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>