force-app/main/default/objects/Project_Proposal__c/fields/I_RS_GMO_Additional_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GMO_Additional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will an additional GMO approval be required to conduct the proposed research?</inlineHelpText>
    <label>Additional GMO approval required?</label>
    <type>Checkbox</type>
</CustomField>