force-app/main/default/objects/Project_Proposal__c/fields/I_RS_GMO_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GMO_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is there an existing GMO ethics approval that covers the proposed research?</inlineHelpText>
    <label>Existing GMO approval?</label>
    <type>Checkbox</type>
</CustomField>