force-app/main/default/objects/Project_Proposal__c/fields/I_RS_GMO_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_GMO_Approval_Date__c</fullName>
    <inlineHelpText>By when will the additional GMO approval be required so that the research project is not delayed.</inlineHelpText>
    <label>Date by when GMO approval is required?</label>
    <type>Date</type>
</CustomField>