force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Grant_ID_s_CI_is_associated_to__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Grant_ID_s_CI_is_associated_to__c</fullName>
    <description>Not all Grants have IDs
Note: particularly needed for ARC and NHMRC Needed to determine eligibility</description>
    <label>Grant ID&apos;s CI is associated to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>