force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Head_of_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Head_of_School__c</fullName>
    <description>The Head of the School the Lead Chief Investigator belongs to (if any)</description>
    <formula>BLANKVALUE(I_RS_LeadChiefInvestigator__r.Contact.I_RS_Head_Of_School__c, &apos;&apos;)</formula>
    <label>Head of School</label>
    <type>Text</type>
</CustomField>