force-app/main/default/objects/Project_Proposal__c/fields/I_RS_I_Agree__c.field-meta.xml
<CustomField>
    <fullName>I_RS_I_Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Agree</label>
    <type>Checkbox</type>
</CustomField>