force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Internal_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Internal_date__c</fullName>
    <label>Internal Date</label>
    <type>Date</type>
</CustomField>