force-app/main/default/objects/Project_Proposal__c/fields/I_RS_IP_Position__c.field-meta.xml
<CustomField>
    <fullName>I_RS_IP_Position__c</fullName>
    <inlineHelpText>Nominate preferred position toward ownership of intellectual property created under the project (Project IP).  If Project IP is owned by the other party, we can request rights to use the Project IP.  This may change upon Agreement finalisation.</inlineHelpText>
    <label>IP Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned by La Trobe</fullName>
            </value>
            <value>
                <fullName>Jointly owned</fullName>
            </value>
            <value>
                <fullName>Owned by other organisation with rights for La Trobe to use for research and teaching</fullName>
            </value>
            <value>
                <fullName>Owned by other organisation – no rights to La Trobe to use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>