force-app/main/default/objects/Project_Proposal__c/fields/I_RS_La_Trobe_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_ID__c</fullName>
    <label>La Trobe ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>