force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Lead_Chief_Investigator__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Chief Investigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Proposals</relationshipLabel>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>