force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Lead_Chief_Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Lead_Chief_Investigator_Name__c</fullName>
    <formula>I_RS_LeadChiefInvestigator__r.FirstName &amp; &quot; &quot; &amp; I_RS_LeadChiefInvestigator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Chief Investigator Name</label>
    <type>Text</type>
</CustomField>